# mqc3-simulator

./: .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.python  Dockerfile.wheel  Doxyfile  LICENSE  Pipfile  README.md  pyproject.toml  pyrightconfig.json  ruff.toml  vcpkg.json
benchmark/: CMakeLists.txt  README.md  benchmark.py  bs_op_time.cpp  common.h  initial_state.h  initial_state_time.cpp  initial_state_time_gpu.cpp  measure_op_time.cpp  plot.py  plot_bar.py  plot_change.py  rotation_op_time.cpp  sf_bs_op_time.py  sf_measure_op_time.py  sf_rotation_op_time.py  table_header.cpp  utility.py
benchmark/graph/: CMakeLists.txt  benchmark.py  graph_repr.py  graph_simulator_time.cpp  graph_table_header.cpp  plot.py
benchmark/machinery/: CMakeLists.txt  benchmark.py  machinery_simulator_time.cpp  plot.py
cmake/: README.md  bosimConfig.cmake.in  deps.cmake  gpu.cmake  utils.cmake  version.h.in
codegen/: CMakeLists.txt  Makefile  buf.gen.yaml
codegen/mqc3_cloud/common/v1/: error_detail.grpc.pb.cc  error_detail.grpc.pb.h  error_detail.pb.cc  error_detail.pb.h  function.grpc.pb.cc  function.grpc.pb.h  function.pb.cc  function.pb.h  math.grpc.pb.cc  math.grpc.pb.h  math.pb.cc  math.pb.h
codegen/mqc3_cloud/program/v1/: circuit.grpc.pb.cc  circuit.grpc.pb.h  circuit.pb.cc  circuit.pb.h  graph.grpc.pb.cc  graph.grpc.pb.h  graph.pb.cc  graph.pb.h  machinery.grpc.pb.cc  machinery.grpc.pb.h  machinery.pb.cc  machinery.pb.h  quantum_program.grpc.pb.cc  quantum_program.grpc.pb.h  quantum_program.pb.cc  quantum_program.pb.h
codegen/mqc3_cloud/scheduler/v1/: execution.grpc.pb.cc  execution.grpc.pb.h  execution.pb.cc  execution.pb.h  job.grpc.pb.cc  job.grpc.pb.h  job.pb.cc  job.pb.h
docs/: algorithm.md  code.md
docs/images/: images.drawio
examples/: CMakeLists.txt  README.md  teleportation.cpp
scripts/: README.md
scripts/prod/: start_simulator_prod.sh
server/: CMakeLists.txt  Dockerfile.release  README.md  compose.dev.yaml  compose.prod.yaml  compose.yaml
server/fluent-bit/: fluent-bit.conf
server/main/: main.cpp
server/settings/: errors.json
server/src/: CMakeLists.txt
server/src/server/base/: string.h
server/src/server/clients/: base.h  scheduler.h
server/src/server/common/: backup.h  error_code.h  message_manager.cpp  message_manager.h  stats.h  string.h  utility.cpp  utility.h
server/src/server/runner/: common.h  curl.h  runner.h  simulate.h  upload.h  validate.cpp  validate.h
server/src/server/server/: run_server.cpp  run_server.h  server.cpp  server.h
server/src/server/settings/: settings.h  token.h
src/: CMakeLists.txt
src/bosim/: README.md  circuit.h  exception.h  operation.h  result.h  simulator.h  state.h
src/bosim/base/: README.md  constant.h  float.h  log.cpp  log.h  math.h  timer.h
src/bosim/binding/: simulator_binding.cpp
src/bosim/gpu/: README.md  simulate_gpu.cu  simulate_gpu.h  simulator_gpu.cuh  state_gpu.cuh  status.cu  status.h
src/bosim/python/: function.h  manager.h
src/bosim/simulate/: circuit_repr.h  circuit_simulate.h  graph_repr.h  graph_result.h  graph_simulate.h  machinery_repr.h  machinery_simulate.h  settings.h  simulate.cpp  simulate.h  simulate_cpu_multi_thread.h  simulate_cpu_single_thread.h
src/mqc3_simulator/: __init__.py
tests/: CMakeLists.txt  README.md  utility.py
tests/base/: circuit.cpp  circuit.py  log.cpp  math.cpp  operation.cpp  operation.py  parallel.cpp  state.cpp  state.py  statistics.py  utility.h
tests/circuit/: circuit_repr.cpp  circuit_repr.h  circuit_result.cpp  teleportation.cpp
tests/cli/: circuit.cpp  circuit.h  graph.cpp  machinery.cpp
tests/gpu/: circuit.cpp  status.cpp
tests/graph/: graph_repr.cpp  graph_repr.h  graph_result.cpp  graph_simulate.cpp  test_simulator_teleportation.py  test_simulator_unitary.py  utility.py
tests/machinery/: machinery_repr.cpp  machinery_repr.h  machinery_simulate.cpp  test_displacement.py  test_init_measure_circuit.py  test_nlff.py  test_nullifier.py  test_rot_measure_circuit.py
tests/python/: function.cpp
tests/server/common/: message_manager.cpp  utility.cpp
tests/server/runner/: runner.cpp
tools/: README.md  clang-format.sh  clang-tidy.sh  cmake-format.sh  coverage.sh  doxygen.sh
